--- a/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/values/strings.xml
+++ b/Programming/6_sem (Android)/Monstruos/Lab2/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Lab2</string>
     <string name="text_activity1">Это первое Activity</string>
     <string name="text_activity2">Это второе Activity</string>
+    <string name="text_activity3">Это третье Activity</string>
+    <string name="text_tab_header">Заголовок</string>
 </resources>
