Cделал первую вкладку (Андроид)
Все попытки минимизировать говяность происходящего без кардинальной перестройки кода оказались безуспешны

--- a/Programming/6_sem (Android)/Lab2/app/src/main/res/values/strings.xml
+++ b/Programming/6_sem (Android)/Lab2/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MyTabs</string>
+    <string name="first_tab_string">This is tab with picture</string>
+    <string name="first_tab_name">Picture</string>
+    <string name="second_tab_name">List</string>
+    <string name="third_tab_name">Table</string>
 </resources>
